# youmail

./: .gitignore  README.md
backend/: .env.example  .gitignore  ASSISTANT_SETUP.md  GMAIL_OAUTH_SETUP.md  README.md  main.py  pyproject.toml
backend/api/: app.py
backend/clients/: __init__.py  gmail_client.py  llm_client.py
backend/core/: __init__.py  config.py  exceptions.py  logging_config.py
backend/models/: __init__.py  assistant_actions.py  email.py
backend/rpc/: __init__.py  assistant_servicer.py  server.py  servicer.py
backend/rpc/proto/: __init__.py  assistant.proto  assistant_pb2.py  assistant_pb2_grpc.py  mail.proto  mail_pb2.py  mail_pb2_grpc.py
backend/scripts/: generate_grpc.py  test_assistant_grpc.py
backend/services/: __init__.py  assistant_service.py  mail_service.py
frontend/: COMPOSE_UI_DIFFERENCES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: assistant.ts  mail.ts  mapEmail.ts
frontend/src/components/: AssistantPanel.tsx  ComposeModal.tsx  EmailDetail.tsx  EmailList.tsx  ReplyModal.tsx  Sidebar.tsx
frontend/src/data/: dummyEmails.ts
frontend/src/layout/: MainLayout.tsx
